Внесены поправки в README, исправлено оформление и адаптивность секции cover

--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -1,4 +1,4 @@
-.cover__background {
+/*.cover__background {
   background-image: url("../../../images/__background.jpg");
   background-size: contain;
   width: 1280px;
@@ -49,3 +49,4 @@
     background-size: cover;
   }
 }
+*/
