--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,15 +1,33 @@
-.cover__overlay {
+.cover__overlay {  
   position: relative;
   top: 0;
+  background-image: url('../../../images/cover-trains.jpg');
+  background-position: center;
+  background-size: cover;
   bottom: 740px;
-  background: #2a2c2f;
-  opacity: 0.3;
-  z-index: 2;
   width: calc(100vw - calc(48px + 48px + calc((100vw - 1280px)/2) + calc((100vw - 1280px)/2)));
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
 }
 
-.cover__overlay:hover {
+.cover__overlay::before {
+  display: block;
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #2A2C2F;
+  opacity: 0.3;
+  transition: 0.3s ease-in;
+}
+
+.cover__overlay:hover::before {
   opacity: 0.8;
   cursor: pointer;
 }
