--- a/blocks/subtitle/_place/subtitle_place_cover.css
+++ b/blocks/subtitle/_place/subtitle_place_cover.css
@@ -1,6 +1,5 @@
 .subtitle_place_cover {
   position: relative;
-  bottom: 492px;
   font-family: Inter;
   font-style: normal;
   font-weight: normal;
@@ -8,9 +7,9 @@
   line-height: 1.22;
   text-align: center;
   color: #ffffff;
-  z-index: 3;
   width: 30.5%;
-  margin: 1.77em 22.8em 0;
+  margin: 32px auto 0;
+  z-index: 3;
 }
 
 .subtitle_place_cover:hover {
@@ -20,25 +19,23 @@
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
   .subtitle_place_cover {
     width: 22.5rem;
-    margin: 0 calc((100% - 360px) / 2) 0;
+    margin: 32px calc((100% - 360px) / 2) 0;
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
   .subtitle_place_cover {
     width: 360px;
-    margin: 0 calc((100% - 360px) / 2) 0;
-    bottom: 345px;
+    margin: 32px calc((100% - 360px) / 2) 0;
   }
 }
 
 @media screen and (min-width: 425px) and (max-width: 768px) {
   .subtitle_place_cover {
-    width: 90%;
+    width: 80%;
     height: min-content;
     font-size: 14px;
     line-height: 16px;
-    bottom: 83%;
     margin: 24px calc((100% - 90%) / 2) 0;
   }
 }
@@ -49,7 +46,6 @@
     height: 48px;
     font-size: 14px;
     line-height: 16px;
-    bottom: 159px;
     margin: 16px calc((100% - 90%) / 2) 0;
   }
 }
