--- a/blocks/title/_place/title_place_cover.css
+++ b/blocks/title/_place/title_place_cover.css
@@ -1,10 +1,9 @@
 .title_place_cover {
   position: relative;
-  bottom: 480px;
-  z-index: 3;
   width: 35rem;
   font-size: 72px;
   line-height: 1.05;
+  z-index: 3;
 }
 
 .title_place_cover:hover {
@@ -19,25 +18,20 @@
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
   .title_place_cover {
-    bottom: 343px;
+    width: 84.3%;
     font-size: 72px;
-    line-height: 76px;
-    width: 35rem;
-    height: 152px;
-    margin-bottom: 32px;
+    margin: 0 auto;
+    height: auto;
   }
 }
 
 @media screen and (min-width: 425px) and (max-width: 768px) {
   .title_place_cover {
-    width: 90%;
-    height: min-content;
-    font-size: 32px;
-    line-height: 1.09;
-    margin-left: 16px;
-    bottom: 83%;
-    text-align: center;
-  }
+      width: 60%;
+      font-size: 42px;
+      margin: 0 auto;
+      height: auto;
+    }
 }
 
 @media screen and (min-width: 320px) and (max-width: 425px) {
@@ -47,7 +41,6 @@
     font-size: 32px;
     line-height: 1.09;
     margin-left: 16px;
-    bottom: 161px;
     text-align: center;
   }
 }
