--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -5,10 +5,10 @@
   font-weight: normal;
   line-height: 1.16;
   text-align: right;
+  transition: linear 0.2s;
 }
 
 .header__lang-link:hover {
   opacity: 0.7;
-  text-decoration-line: underline;
   cursor: pointer;
 }
