--- a/pages/index.css
+++ b/pages/index.css
@@ -10,6 +10,8 @@
 
 @import url(../blocks/header/__lang-link/header__lang-link.css);
 
+@import url(../blocks/header/__lang-link/_status/header__lang-link_status_active.css);
+
 @import url(../blocks/logo/logo.css);
 
 @import url(../blocks/lead/lead.css);
