--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -6,9 +6,11 @@
   -moz-text-size-adjust: 100%;
   text-rendering: optimizeLegibility;
   background-color: #2a2c2f;
+  margin: 0;
   padding: 28px 48px 24px;
   position: relative;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
