--- a/blocks/places/__url-heading/places__url-heading.css
+++ b/blocks/places/__url-heading/places__url-heading.css
@@ -18,7 +18,7 @@
   .places__url-heading {
     margin-top: 32px;
     width: 90%;
-    height: 12px;
+    min-height: 12px;
     font-size: 12px;
     line-height: 12px;
     letter-spacing: 2px;
@@ -29,7 +29,6 @@
   .places__url-heading {
     margin-top: 32px;
     width: 90%;
-    height: 12px;
     font-size: 12px;
     line-height: 12px;
     letter-spacing: 2px;
