--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -39,7 +39,7 @@
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
   .cover__overlay {
-    width: 100%;
+    width: 100vw;
     object-fit: cover;
   }
 }
