--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -14,6 +14,7 @@
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
   .cover {
     width: 100vw;
+    margin: 0;
     padding-bottom: 0;
     height: 40rem;
   }
