--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -15,7 +15,7 @@
 @media screen and (min-width: 425px) and (max-width: 768px) {
   .footer__link {
     width: 3.08em;
-    height: 24px;
+    min-height: 24px;
     font-size: 24px;
     line-height: 1;
   }
@@ -24,7 +24,6 @@
 @media screen and (min-width: 320px) and (max-width: 425px) {
   .footer__link {
     width: 3.08em;
-    height: 24px;
     font-size: 24px;
     line-height: 1;
   }
