--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,6 +3,7 @@
   flex-direction: row;
   position: relative;
   min-height: 52px;
+  justify-content: space-between;
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
@@ -22,6 +23,7 @@
     padding: 0 24px 0;
   }
 }
+
 
 @media screen and (min-width: 320px) and (max-width: 425px) {
   .header {
