--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -12,7 +12,7 @@
 @media screen and (min-width: 320px) and (max-width: 425px) {
   .intro__list {
     width: 90%;
-    height: 90px;
+    min-height: 90px;
     font-size: 12px;
     line-height: 1.5;
   }
