--- a/blocks/link/link.css
+++ b/blocks/link/link.css
@@ -16,7 +16,7 @@
 @media screen and (min-width: 425px) and (max-width: 768px) {
   .link {
     width: 90%;
-    height: 22px;
+    min-height: 22px;
     font-size: 18px;
     line-height: 22px;
     text-decoration-line: underline;
@@ -26,7 +26,6 @@
 @media screen and (min-width: 320px) and (max-width: 425px) {
   .link {
     width: 90%;
-    height: 22px;
     font-size: 18px;
     line-height: 22px;
     text-decoration-line: underline;
