--- a/blocks/title/_place/title_place_cover.css
+++ b/blocks/title/_place/title_place_cover.css
@@ -21,7 +21,7 @@
     width: 84.3%;
     font-size: 72px;
     margin: 0 auto;
-    height: auto;
+    min-height: auto;
   }
 }
 
@@ -30,14 +30,13 @@
     width: 60%;
     font-size: 42px;
     margin: 0 auto;
-    height: auto;
   }
 }
 
 @media screen and (min-width: 320px) and (max-width: 425px) {
   .title_place_cover {
     width: 90%;
-    height: 70px;
+    min-height: 70px;
     font-size: 32px;
     line-height: 1.09;
     margin-left: 16px;
