--- a/blocks/title/_place/title_place_places.css
+++ b/blocks/title/_place/title_place_places.css
@@ -27,14 +27,14 @@
     line-height: 46px;
     margin-right: 28px;
     padding-bottom: 48px;
-    height: min-content;
+    min-height: min-content;
   }
 }
 
 @media screen and (min-width: 425px) and (max-width: 768px) {
   .title_place_places {
     width: 90%;
-    height: 35px;
+    min-height: 35px;
     font-size: 32px;
     line-height: 1.09;
     padding-left: 16px;
@@ -45,7 +45,6 @@
 @media screen and (min-width: 320px) and (max-width: 425px) {
   .title_place_places {
     width: 90%;
-    height: 35px;
     font-size: 32px;
     line-height: 1.09;
     padding-left: 16px;
