--- a/blocks/title/title.css
+++ b/blocks/title/title.css
@@ -19,7 +19,7 @@
 @media screen and (min-width: 425px) and (max-width: 768px) {
   .title {
     width: 90%;
-    height: 5.5rem;
+    min-height: 5.5rem;
     font-size: 40px;
     line-height: 44px;
   }
@@ -28,7 +28,6 @@
 @media screen and (min-width: 320px) and (max-width: 425px) {
   .title {
     width: 90%;
-    height: 5.5rem;
     font-size: 40px;
     line-height: 44px;
   }
