--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -5,12 +5,6 @@
   background-position: center;
   background-size: cover;
   bottom: 740px;
-  width: calc(
-    100vw -
-      calc(
-        48px + 48px + calc((100vw - 1280px) / 2) + calc((100vw - 1280px) / 2)
-      )
-  );
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -33,13 +27,15 @@
 }
 
 .cover__overlay:hover::before {
+  width: 100%;
   opacity: 0.8;
   cursor: pointer;
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
   .cover__overlay {
-    width: 100vw;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
   }
 }
@@ -47,7 +43,7 @@
 @media screen and (min-width: 768px) and (max-width: 1024px) {
   .cover__overlay {
     width: 100%;
-    height: 480px;
+    height: 100%;
     object-fit: cover;
     margin-right: 0;
   }
@@ -56,15 +52,15 @@
 @media screen and (min-width: 425px) and (max-width: 768px) {
   .cover__overlay {
     width: 100%;
-    height: 40vh;
-    object-fit: cover;
+    height: 100%;
+    object-fit: scale-down;
   }
 }
 
 @media screen and (min-width: 320px) and (max-width: 425px) {
   .cover__overlay {
     width: 100%;
-    height: 200px;
+    height: 100%;
     object-fit: cover;
   }
 }
