--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,29 +1,22 @@
 .cover {
-  width: calc(
-    100vw -
-      calc(
-        48px + 48px + calc((100vw - 1280px) / 2) + calc((100vw - 1280px) / 2)
-      )
-  );
+  width: auto;
   position: relative;
-  height: 46.25rem;
+  height: 740px;
   margin: 0 auto;
-  padding: 0 calc((100vw - 1280px) / 2);
+  padding: 0;
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
   .cover {
-    width: 100vw;
     margin: 0;
-    padding-bottom: 0;
-    height: 40rem;
+    height: 640px;
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
   .cover {
     width: 100%;
-    height: 480px;
+    height: 640px;
     padding-bottom: 88px;
   }
 }
@@ -31,7 +24,7 @@
 @media screen and (min-width: 425px) and (max-width: 768px) {
   .cover {
     width: 100%;
-    height: 35.2vh;
+    height: 400px;
     padding-bottom: 0;
     object-fit: cover;
     margin-top: 66px;
@@ -41,7 +34,7 @@
 @media screen and (min-width: 320px) and (max-width: 425px) {
   .cover {
     width: 100%;
-    height: 12.5rem;
+    height: 200px;
     padding-bottom: 0;
     object-fit: cover;
     margin-top: 66px;
