--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -8,14 +8,15 @@
   color: #ffffff;
   padding-top: 0.8em;
   padding-left: calc((100% - 984px) / 2);
+  padding-right: 0;
   letter-spacing: 1.5px;
   text-transform: uppercase;
   margin: 0;
+  width: 158px;
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
   .lead__caption {
-    width: 100%;
     padding-top: 8px;
     padding-left: calc((100% - 928px) / 2);
     padding-right: 0;
