--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -11,6 +11,7 @@
   justify-content: center;
   align-items: center;
   text-decoration: none;
+  min-height: 740px;
 }
 
 .cover__overlay::before {
@@ -20,7 +21,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  min-height: 740px;
   background-color: #2a2c2f;
   opacity: 0.3;
   transition: 0.3s ease-in;
@@ -35,32 +36,48 @@
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
   .cover__overlay {
     width: 100%;
-    height: 100%;
+    min-height: 640px;
     object-fit: cover;
+  }
+
+  .cover__overlay::before {
+    min-height: 640px;
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
   .cover__overlay {
     width: 100%;
-    height: 100%;
+    min-height: 480px;
     object-fit: cover;
     margin-right: 0;
+  }
+
+  .cover__overlay::before {
+    min-height: 480px;
   }
 }
 
 @media screen and (min-width: 425px) and (max-width: 768px) {
   .cover__overlay {
     width: 100%;
-    height: 100%;
+    min-height: 480px;
     object-fit: scale-down;
+  }
+
+  .cover__overlay::before {
+    min-height: 480px;
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 425px) {
+@media screen and (max-width: 425px) {
   .cover__overlay {
     width: 100%;
-    height: 100%;
+    min-height: 200px;
     object-fit: cover;
+  }
+
+  .cover__overlay::before {
+    min-height: 200px;
   }
 }
