--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,42 +1,33 @@
 .cover {
   width: auto;
   position: relative;
-  height: 740px;
   margin: 0 auto;
-  padding: 0;
+  padding: 0 0 92px 0;
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
   .cover {
     margin: 0;
-    height: 640px;
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
   .cover {
     width: 100%;
-    height: 640px;
     padding-bottom: 88px;
   }
 }
 
 @media screen and (min-width: 425px) and (max-width: 768px) {
   .cover {
-    width: 100%;
-    height: 400px;
-    padding-bottom: 0;
+    padding-bottom: 88px;
     object-fit: cover;
     margin-top: 66px;
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 425px) {
+@media screen and (max-width: 425px) {
   .cover {
-    width: 100%;
-    height: 200px;
-    padding-bottom: 0;
-    object-fit: cover;
-    margin-top: 66px;
+    max-width: 320px;
   }
 }
