--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,10 +1,10 @@
 .footer__link {
-  font-family: Inter;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
   line-height: 1.12;
   text-decoration: none;
+  margin-right: 18px;
 }
 
 .footer__link:hover {
@@ -12,18 +12,8 @@
   opacity: 0.7;
 }
 
-@media screen and (min-width: 425px) and (max-width: 768px) {
+@media screen and (max-width: 425px) {
   .footer__link {
-    width: 3.08em;
-    min-height: 24px;
-    font-size: 24px;
-    line-height: 1;
-  }
-}
-
-@media screen and (min-width: 320px) and (max-width: 425px) {
-  .footer__link {
-    width: 3.08em;
     font-size: 24px;
     line-height: 1;
   }
