--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,47 +1,33 @@
 .footer__links {
   margin: 0;
   padding: 0;
-  display: inline-flex;
+  display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   list-style-type: none;
-  margin: 0;
-  padding: 0;
-  min-width: 29.06rem;
+  align-content: center;
   overflow: hidden;
 }
 
 @media screen and (min-width: 425px) and (max-width: 768px) {
   .footer__links {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    margin: 0;
-    padding-left: 16px;
-    padding-top: 24px;
-    padding-bottom: 8px;
-    color: #ffffff;
-    list-style-type: none;
-    overflow: hidden;
-    min-height: 310px;
-    font-size: 24px;
-    min-width: 320px;
+    font-size: 16px;
+    line-height: 18px;
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 425px) {
+@media screen and (max-width: 425px) {
   .footer__links {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
+    box-sizing: border-box;
+    display: grid;
+    grid-template-rows: repeat(5, 24px);
+    gap: 32px;
+    padding: 0;
     margin: 0;
-    padding-left: 16px;
-    padding-top: 24px;
-    padding-bottom: 8px;
     color: #ffffff;
     list-style-type: none;
     overflow: hidden;
-    min-height: 310px;
     font-size: 24px;
-    min-width: 320px;
+    max-width: calc(100% - 32px);
   }
 }
