--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,8 +1,10 @@
 .footer {
-  margin-top: 5.75rem;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-between;
+  margin: 0 auto 24px;
+  max-width: calc(100% - 96px);
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
@@ -11,28 +13,20 @@
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1024px) {
+@media screen and (min-width: 424px) and (max-width: 1024px) {
   .footer {
-    padding-left: 24px;
+    padding: 0 24px;
   }
 }
 
-@media screen and (min-width: 425px) and (max-width: 768px) {
+@media screen and (max-width: 425px) {
   .footer {
     display: flex;
     flex-direction: column;
     min-height: 374px;
-    width: 100%;
-    margin: 64px auto 0;
-  }
-}
-
-@media screen and (min-width: 320px) and (max-width: 425px) {
-  .footer {
-    display: flex;
-    flex-direction: column;
-    min-height: 374px;
-    width: 100%;
+    max-width: 320px;
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
   }
 }
