--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,30 +4,21 @@
   position: relative;
   min-height: 52px;
   justify-content: space-between;
+  margin: 28px auto 64px;
+  max-width: calc(100% - 96px);
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
+@media screen and (min-width: 768px) and (max-width: 1024px) {
   .header {
     padding: 0 48px 0;
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-  .header {
-    padding: 0 24px 0;
-  }
-}
-
-@media screen and (min-width: 425px) and (max-width: 768px) {
-  .header {
-    padding: 0 24px 0;
-  }
-}
-
-
-@media screen and (min-width: 320px) and (max-width: 425px) {
+@media screen and (max-width: 425px) {
   .header {
     min-height: 42px;
-    padding: 0 16px 0;
+    padding: 0;
+    margin: 28px auto 48px;
+    max-width: calc(100% - 32px);
   }
 }
