--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,19 +1,12 @@
 .intro__list {
-  font-family: Inter;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 12px;
-  line-height: 1.5;
-  color: #ffffff;
   width: 70%;
-  min-height: 7.53em;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
 }
 
-@media screen and (min-width: 320px) and (max-width: 425px) {
+@media screen and (max-width: 425px) {
   .intro__list {
     width: 90%;
-    min-height: 90px;
-    font-size: 12px;
-    line-height: 1.5;
   }
 }
