--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,5 +1,4 @@
 .intro__text {
-  font-family: Inter;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -10,11 +9,9 @@
   width: 70%;
 }
 
-@media screen and (min-width: 320px) and (max-width: 425px) {
+@media screen and (max-width: 425px) {
   .intro__text {
     padding: 0;
     width: 90%;
-    font-size: 16px;
-    line-height: 1.62;
   }
 }
