--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,31 +1,27 @@
 .intro {
-  margin: 0 100px 0;
+  margin: 0 auto;
   padding-bottom: 92px;
-}
-
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
-  .intro {
-    padding: 0 calc((100% - 928px) / 2) 92px;
-    margin: 0;
-  }
+  max-width: 984px;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
   .intro {
     margin: 0;
-    padding: 0 24px 88px;
+    padding: 0 48px 88px;
   }
 }
 
 @media screen and (min-width: 425px) and (max-width: 768px) {
   .intro {
-    margin: 0;
-    padding: 0 24px 88px;
+    padding: 0;
+    margin: 0 auto 88px 24px;
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 425px) {
+@media screen and (max-width: 425px) {
   .intro {
+    max-width: 320px;
+    box-sizing: border-box;
     margin: 0;
     padding: 0 16px 64px;
   }
