--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -6,28 +6,10 @@
   font-size: 10px;
   line-height: 1.4;
   color: #ffffff;
-  padding-top: 0.8em;
-  padding-left: calc((100% - 984px) / 2);
-  padding-right: 0;
   letter-spacing: 1.5px;
   text-transform: uppercase;
   margin: 0;
-  width: 158px;
-}
-
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
-  .lead__caption {
-    padding-top: 8px;
-    padding-left: calc((100% - 928px) / 2);
-    padding-right: 0;
-    padding-bottom: 0;
-  }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-  .lead__caption {
-    padding-left: 24px;
-  }
+  min-width: 158px;
 }
 
 @media screen and (min-width: 425px) and (max-width: 768px) {
@@ -36,7 +18,7 @@
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 425px) {
+@media screen and (max-width: 425px) {
   .lead__caption {
     padding-left: 16px;
   }
