--- a/blocks/logo/logo.css
+++ b/blocks/logo/logo.css
@@ -1,8 +1,4 @@
-.logo {
-  position: relative;
-}
-
-@media screen and (min-width: 320px) and (max-width: 425px) {
+@media screen and (max-width: 425px) {
   .logo {
     width: 142px;
     height: 42px;
