--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -6,32 +6,17 @@
   -moz-text-size-adjust: 100%;
   text-rendering: optimizeLegibility;
   background-color: #2a2c2f;
-  margin: 0;
-  padding: 28px 48px 24px;
+  margin: 0 auto;
   position: relative;
   box-sizing: border-box;
+  font-family: "Inter", "Open Sans", sans-serif;
+  min-width: 320px;
+  max-width: 1280px;
+  width: 100%;
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
+@media screen and (max-width: 425px) {
   .page {
-    padding: 28px 0 24px;
-  }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-  .page {
-    padding: 28px 0 24px;
-  }
-}
-
-@media screen and (min-width: 425px) and (max-width: 768px) {
-  .page {
-    padding: 28px 0 24px;
-  }
-}
-
-@media screen and (min-width: 320px) and (max-width: 425px) {
-  .page {
-    padding: 16px 0 24px;
+    margin: 0;
   }
 }
