--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -2,30 +2,17 @@
   object-fit: scale-down;
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
+@media screen and (min-width: 425px) and (max-width: 1279px) {
   .photo-grid__item {
     width: 100%;
     object-fit: fill;
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1024px) {
+@media screen and (max-width: 425px) {
   .photo-grid__item {
-    object-fit: fill;
+    display: block;
     width: 100%;
-  }
-}
-
-@media screen and (min-width: 425px) and (max-width: 768px) {
-  .photo-grid__item {
     object-fit: fill;
-    width: 100%;
-  }
-}
-
-@media screen and (min-width: 320px) and (max-width: 425px) {
-  .photo-grid__item {
-    object-fit: fill;
-    width: 100%;
   }
 }
