--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,46 +1,35 @@
 .photo-grid {
   display: grid;
-  grid-template-rows: repeat(auto-fit, minmax(213px, 1fr));
-  grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
+  grid-template-columns: repeat(4, 1fr);
   gap: 16px;
-  padding-bottom: 92px;
-}
-
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
-  .photo-grid {
-    grid-template-rows: repeat(auto-fit, minmax(225px, 1fr));
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    padding-bottom: 92px;
-    width: calc(100% - 96px);
-    margin: 0 auto;
-  }
+  max-width: calc(100% - 96px);
+  margin: 0 auto 92px;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
   .photo-grid {
-    width: calc(100%-48px);
-    margin: 0;
-    padding: 0 24px 88px 24px;
-    grid-template-rows: repeat(auto-fit, minmax(264px, 1fr));
-    grid-template-columns: repeat(auto-fit, minmax(325px, 1fr));
-    gap: 16px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, 1fr);
   }
 }
 
 @media screen and (min-width: 425px) and (max-width: 768px) {
   .photo-grid {
-    padding: 0 16px 68px;
-    grid-template-rows: repeat(auto-fit, minmax(216px, 1fr));
-    grid-template-columns: repeat(auto-fit, minmax(288px, 1fr));
-    gap: 12px;
+    margin: 0 auto 88px;
+    max-width: calc(100% - 48px);
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    grid-gap: 16px;
+    padding: 0 24px 0 24px;
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 425px) {
+@media screen and (max-width: 425px) {
   .photo-grid {
-    padding: 0 16px 68px;
-    grid-template-rows: repeat(auto-fit, minmax(216px, 1fr));
-    grid-template-columns: repeat(auto-fit, minmax(288px, 1fr));
+    margin: 0 auto 64px;
+    padding: 0;
+    max-width: calc(100% - 32px);
+    grid-template-columns: 1fr;
     gap: 12px;
   }
 }
