--- a/blocks/places/__image/places__image.css
+++ b/blocks/places/__image/places__image.css
@@ -1,41 +1,36 @@
 .places__image {
-  object-fit: scale-down;
-  height: 460px;
-  margin-top: 48px;
-  margin-right: 40px;
+  max-width: 460px;
+  max-height: 460px;
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
   .places__image {
-    width: 440px;
-    height: 440px;
-    margin-right: 32px;
-    margin-top: 48px;
+    display: block;
+    max-width: 460px;
+    max-height: 460px;
+    margin: 0;
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
   .places__image {
-    width: 340px;
-    height: 340px;
-    margin-right: 28px;
-    margin-top: 0;
+    max-width: 440px;
   }
 }
 
 @media screen and (min-width: 425px) and (max-width: 768px) {
   .places__image {
     object-fit: contain;
-    height: 340px;
+    max-width: 340px;
+    width: 100%;
+    max-height: 340px;
     margin: 0;
-    padding: 0 calc(100% - 340px - 16px) 0 16px;
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 425px) {
+@media screen and (max-width: 425px) {
   .places__image {
-    width: 100%;
-    height: 340px;
+    max-width: calc(100% - 32px);
     object-fit: cover;
     margin: 0;
     padding: 0;
