--- a/blocks/places/__paragraph/places__paragraph.css
+++ b/blocks/places/__paragraph/places__paragraph.css
@@ -1,9 +1,8 @@
 .places__paragraph {
-  font-family: Inter;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
-  line-height: 163%;
+  line-height: 1.61;
   color: #ffffff;
   padding: 0;
   margin: 0 0 26px 0;
@@ -13,8 +12,7 @@
   .places__paragraph {
     width: 456px;
     min-height: min-content;
-    font-size: 16px;
-    line-height: 163%;
+    font-size: 18px;
     padding: 0;
   }
 }
@@ -23,23 +21,12 @@
   .places__paragraph {
     margin-top: 0;
     margin-bottom: 25px;
+    font-size: 16px;
   }
 }
 
-@media screen and (min-width: 425px) and (max-width: 768px) {
+@media screen and (max-width: 425px) {
   .places__paragraph {
     font-size: 16px;
-    line-height: 1.62;
-    padding-left: 16px;
-    padding-right: 16px;
-  }
-}
-
-@media screen and (min-width: 320px) and (max-width: 425px) {
-  .places__paragraph {
-    font-size: 16px;
-    line-height: 1.62;
-    padding-left: 16px;
-    padding-right: 16px;
   }
 }
