--- a/blocks/places/__paragraphs/places__paragraphs.css
+++ b/blocks/places/__paragraphs/places__paragraphs.css
@@ -1,8 +1,6 @@
 .places__paragraphs {
   display: flex;
   flex-direction: column;
-  margin-top: 48px;
-  width: 48.5%;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
@@ -15,16 +13,6 @@
 
 @media screen and (min-width: 425px) and (max-width: 768px) {
   .places__paragraphs {
-    object-fit: contain;
-    margin-top: 32px;
-    width: 90%;
-  }
-}
-
-@media screen and (min-width: 320px) and (max-width: 425px) {
-  .places__paragraphs {
-    object-fit: contain;
-    margin-top: 32px;
-    width: 90%;
+    margin-top: 0;
   }
 }
