--- a/blocks/places/__place/places__place.css
+++ b/blocks/places/__place/places__place.css
@@ -1,40 +1,36 @@
 .places__place {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  min-height: min-content;
-  width: 84%;
+  margin: 0;
+  display: grid;
+  grid-template-columns: minmax(440px, 460px) minmax(456px, 484px);
+  grid-gap: 40px 40px;
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
+@media screen and (min-width: 1024px) and (max-width: 1280px) {
   .places__place {
-    width: 928px;
-    min-height: 564px;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 48px 32px;
     padding: 0;
-    margin: 0;
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1024px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
   .places__place {
-    width: 720px;
-    height: auto;
-    flex-wrap: wrap;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 48px 32px;
   }
 }
 
 @media screen and (min-width: 425px) and (max-width: 768px) {
   .places__place {
-    flex-direction: column;
-    flex-wrap: nowrap;
-    width: 100%;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    grid-gap: 48px 28px;
+    margin: 0 auto;
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 425px) {
+@media screen and (max-width: 425px) {
   .places__place {
-    flex-direction: column;
-    flex-wrap: nowrap;
-    width: 100%;
+    grid-template-columns: 1fr;
+    grid-gap: 32px 0;
   }
 }
