--- a/blocks/places/__url-heading/places__url-heading.css
+++ b/blocks/places/__url-heading/places__url-heading.css
@@ -1,9 +1,8 @@
 .places__url-heading {
-  font-family: Inter;
   font-style: normal;
   font-weight: normal;
   font-size: 12px;
-  line-height: 1.7;
+  line-height: 1;
   letter-spacing: 2px;
   color: #aaaaaa;
 }
@@ -16,18 +15,8 @@
 
 @media screen and (min-width: 425px) and (max-width: 768px) {
   .places__url-heading {
-    margin-top: 32px;
-    width: 90%;
-    min-height: 12px;
-    font-size: 12px;
-    line-height: 12px;
-    letter-spacing: 2px;
-  }
-}
-
-@media screen and (min-width: 320px) and (max-width: 425px) {
-  .places__url-heading {
-    margin-top: 32px;
+    margin: 0;
+    padding-bottom: 12px;
     width: 90%;
     font-size: 12px;
     line-height: 12px;
