--- a/blocks/places/__website/places__website.css
+++ b/blocks/places/__website/places__website.css
@@ -1,11 +1,11 @@
 .places__website {
-  width: 46%;
+  align-self: end;
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
   .places__website {
-    height: 46px;
     margin-bottom: 0;
+    margin-left: 0;
     width: 300px;
   }
 }
@@ -16,16 +16,8 @@
   }
 }
 
-@media screen and (min-width: 425px) and (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .places__website {
-    margin-left: 16px;
-    margin-bottom: 32px;
-  }
-}
-
-@media screen and (min-width: 320px) and (max-width: 425px) {
-  .places__website {
-    margin-left: 16px;
-    margin-bottom: 32px;
+    margin: 0;
   }
 }
