--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -2,45 +2,42 @@
   display: grid;
   grid-template-rows: repeat(auto-fit, minmax(660px, 1fr));
   gap: 80px;
-  margin-bottom: 92px;
+  padding-left: 100px;
+  margin: 0 0 92px 0;
+  max-width: 984px;
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
   .places {
+    padding: 0;
+    margin: 0 auto 92px;
     grid-template-rows: repeat(auto-fit, minmax(564px, 1fr));
-    padding: 0 48px 0;
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
   .places {
     grid-template-rows: repeat(auto-fit, minmax(434px, 1fr));
-    padding-left: 24px;
     gap: 72px;
-    margin-bottom: 90px;
+    margin: 0 auto 90px;
+    padding: 0 48px;
   }
 }
 
 @media screen and (min-width: 425px) and (max-width: 768px) {
   .places {
-    grid-template-rows: repeat(auto-fit, minmax(434px, 1fr));
+    max-width: calc(100% - 48px);
     margin: 0;
-    padding: 0;
-    grid-template-rows: 19.6% 19.6% 19.6% 17.9% 23%;
-    gap: 50px;
+    padding: 0 24px;
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 425px) {
+@media screen and (max-width: 425px) {
   .places {
-    grid-template-rows: repeat(auto-fit, minmax(984px, 1fr));
-    margin-bottom: 66px;
-  }
-
-  .places__place {
-    flex-direction: column;
-    flex-wrap: nowrap;
-    width: 100%;
-    height: min-content;
+    margin: 0 auto 66px auto;
+    padding: 0;
+    gap: 32px;
+    max-width: calc(100% - 32px);
+    padding: 0 16px;
   }
 }
