--- a/blocks/subtitle/subtitle.css
+++ b/blocks/subtitle/subtitle.css
@@ -1,13 +1,12 @@
 .subtitle {
-  font-family: Inter;
   font-style: normal;
   font-weight: normal;
   font-size: 30px;
   line-height: 1.2;
   color: #ffffff;
   text-align: center;
-  margin: 1.06em auto 2.13em;
-  width: 41.25rem;
+  margin: 0 auto 64px;
+  max-width: 600px;
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
@@ -20,19 +19,14 @@
 
 @media screen and (min-width: 425px) and (max-width: 768px) {
   .subtitle {
-    width: 90%;
-    min-height: 40px;
-    font-size: 16px;
-    line-height: 20px;
-    margin-top: 16px;
-    margin-bottom: 32px;
+    font-size: 3.8vw;
+    max-width: 80%;
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 425px) {
+@media screen and (max-width: 425px) {
   .subtitle {
-    width: 90%;
-    min-height: 40px;
+    max-width: 80%;
     font-size: 16px;
     line-height: 20px;
     margin-top: 16px;
