--- a/blocks/title/_place/title_place_cover.css
+++ b/blocks/title/_place/title_place_cover.css
@@ -1,9 +1,16 @@
 .title_place_cover {
   position: relative;
-  width: 35rem;
   font-size: 72px;
   line-height: 1.05;
   z-index: 3;
+  margin: 0;
+  max-width: 560px;
+  text-align: center;
+  grid-column: 1;
+  grid-row: 1;
+  justify-self: center;
+  margin: 0 0 32px;
+  text-align: center;
 }
 
 .title_place_cover:hover {
@@ -12,7 +19,9 @@
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
   .title_place_cover {
-    margin: 0 calc((100% - 560px) / 2) 32px;
+    margin: 0 0 32px 0;
+    max-width: min-content;
+    text-align: center;
   }
 }
 
@@ -20,26 +29,22 @@
   .title_place_cover {
     width: 84.3%;
     font-size: 72px;
-    margin: 0 auto;
     min-height: auto;
   }
 }
 
-@media screen and (min-width: 425px) and (max-width: 768px) {
+@media screen and (min-width: 425px) and (max-width: 767px) {
   .title_place_cover {
-    width: 60%;
-    font-size: 42px;
-    margin: 0 auto;
+    font-size: 52px;
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 425px) {
+@media screen and (max-width: 425px) {
   .title_place_cover {
     width: 90%;
-    min-height: 70px;
     font-size: 32px;
     line-height: 1.09;
-    margin-left: 16px;
+    margin: 0;
     text-align: center;
   }
 }
