--- a/blocks/title/_place/title_place_intro.css
+++ b/blocks/title/_place/title_place_intro.css
@@ -1,5 +1,4 @@
 .title_place_intro {
-  font-family: Inter;
   font-style: normal;
   font-weight: 900;
   font-size: 54px;
@@ -10,10 +9,9 @@
   width: 70%;
 }
 
-@media screen and (min-width: 320px) and (max-width: 425px) {
+@media screen and (max-width: 425px) {
   .title_place_intro {
     width: 90%;
-    height: 70px;
     font-size: 32px;
     line-height: 1.09;
   }
