--- a/blocks/title/title.css
+++ b/blocks/title/title.css
@@ -1,31 +1,22 @@
 .title {
-  font-family: Inter;
   font-style: normal;
   font-weight: 900;
   font-size: 96px;
   line-height: 1.04;
   color: #ffffff;
   text-align: center;
-  width: 45rem;
-  margin: 0 auto;
-}
-
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
-  .title {
-    margin: 0 calc((100% - 720px) / 2) 32px;
-  }
+  margin: 0 auto 24px;
+  max-width: 720px;
 }
 
 @media screen and (min-width: 425px) and (max-width: 768px) {
   .title {
-    width: 90%;
-    min-height: 5.5rem;
-    font-size: 40px;
-    line-height: 44px;
+    font-size: 10vw;
+    max-width: 100%;
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 425px) {
+@media screen and (max-width: 425px) {
   .title {
     width: 90%;
     font-size: 40px;
