--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,27 +1,19 @@
 .cover__overlay {
-  position: relative;
-  top: 0;
-  background-image: url("../../../images/cover-trains.jpg");
-  background-position: center;
+  background-image: url(../../../images/cover-trains.jpg);
   background-size: cover;
-  bottom: 740px;
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  max-height: 740px;
   align-items: center;
-  text-decoration: none;
-  min-height: 740px;
+  justify-content: center;
 }
 
 .cover__overlay::before {
-  display: block;
   content: "";
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  min-height: 740px;
+  right: 0;
+  bottom: 0;
   background-color: #2a2c2f;
   opacity: 0.3;
   transition: 0.3s ease-in;
@@ -31,53 +23,4 @@
   width: 100%;
   opacity: 0.8;
   cursor: pointer;
-}
-
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
-  .cover__overlay {
-    width: 100%;
-    min-height: 640px;
-    object-fit: cover;
-  }
-
-  .cover__overlay::before {
-    min-height: 640px;
-  }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-  .cover__overlay {
-    width: 100%;
-    min-height: 480px;
-    object-fit: cover;
-    margin-right: 0;
-  }
-
-  .cover__overlay::before {
-    min-height: 480px;
-  }
-}
-
-@media screen and (min-width: 425px) and (max-width: 768px) {
-  .cover__overlay {
-    width: 100%;
-    min-height: 480px;
-    object-fit: scale-down;
-  }
-
-  .cover__overlay::before {
-    min-height: 480px;
-  }
-}
-
-@media screen and (max-width: 425px) {
-  .cover__overlay {
-    width: 100%;
-    min-height: 200px;
-    object-fit: cover;
-  }
-
-  .cover__overlay::before {
-    min-height: 200px;
-  }
 }
