--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,33 +1,44 @@
 .cover {
-  width: auto;
+  display: flex;
+  flex-direction: column;
+  max-width: 1184px;
   position: relative;
   margin: 0 auto;
   padding: 0 0 92px 0;
+  text-align: center;
+  justify-content: center;
+  min-height: 740px;
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
   .cover {
-    margin: 0;
+    width: 100%;
+    min-height: 640px;
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1024px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
   .cover {
-    width: 100%;
+    max-width: 100%;
     padding-bottom: 88px;
+    min-height: 480px;
   }
 }
 
 @media screen and (min-width: 425px) and (max-width: 768px) {
   .cover {
+    width: 100%;
     padding-bottom: 88px;
     object-fit: cover;
     margin-top: 66px;
+    min-height: 480px;
   }
 }
 
 @media screen and (max-width: 425px) {
   .cover {
-    max-width: 320px;
+    min-width: 320px;
+    padding-bottom: 64px;
+    min-height: 200px;
   }
 }
