--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -13,7 +13,14 @@
   }
 }
 
-@media screen and (min-width: 424px) and (max-width: 1024px) {
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .footer {
+    min-width: 720px;
+    max-width: calc(100% - 6.25%);
+  }
+}
+
+@media screen and (min-width: 424px) and (max-width: 767px) {
   .footer {
     padding: 0 24px;
   }
@@ -21,9 +28,8 @@
 
 @media screen and (max-width: 425px) {
   .footer {
-    display: flex;
     flex-direction: column;
-    min-height: 374px;
+    min-height: 334px;
     max-width: 320px;
     margin: 0;
     padding: 0;
