--- a/blocks/header/__lang-link/_active/header__lang-link_active.css
+++ b/blocks/header/__lang-link/_active/header__lang-link_active.css
@@ -1,4 +1,4 @@
-.header__button_active {
+.header__lang-link_active {
   background-color: transparent;
   border: none;
   text-decoration: underline;
