--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -3,8 +3,8 @@
   flex-direction: row;
   justify-content: space-between;
   list-style-type: none;
-  right: 0;
-  bottom: 0;
+  margin: 0;
+  padding: 0;
   align-items: flex-end;
   font-size: 24px;
   padding-bottom: 6px;
@@ -13,6 +13,7 @@
 
 @media screen and (max-width: 425px) {
   .header__lang-links {
+    padding-bottom: 8px;
     font-size: 18px;
     line-height: 1.11;
   }
