--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: row;
   position: relative;
-  min-height: 52px;
   justify-content: space-between;
   margin: 28px auto 64px;
   max-width: calc(100% - 96px);
@@ -10,7 +9,9 @@
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
   .header {
-    padding: 0 48px 0;
+    margin-bottom: 48px;
+    padding: 0 24px 0;
+    max-height: 52px;
   }
 }
 
@@ -18,7 +19,7 @@
   .header {
     min-height: 42px;
     padding: 0;
-    margin: 28px auto 48px;
+    margin: 16px auto 48px;
     max-width: calc(100% - 32px);
   }
 }
