--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -9,6 +9,12 @@
   width: 70%;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .intro__text {
+    width: 93.75%;
+  }
+}
+
 @media screen and (max-width: 425px) {
   .intro__text {
     padding: 0;
