--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,18 +1,11 @@
 .lead__image {
-  margin: 0 0 8px 0;
+  margin: 0 auto 8px;
   display: block;
   min-height: 62.5%;
   max-width: 100%;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-  .lead__image {
-    width: 100%;
-    object-fit: cover;
-  }
-}
-
-@media screen and (min-width: 425px) and (max-width: 768px) {
+@media screen and (min-width: 425px) and (max-width: 1024px) {
   .lead__image {
     width: 100%;
     object-fit: cover;
@@ -22,7 +15,7 @@
 @media screen and (max-width: 425px) {
   .lead__image {
     height: 200px;
-    width: auto;
+    width: 100%;
     object-fit: cover;
   }
 }
