--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -7,7 +7,7 @@
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
   .lead {
-    max-width: 90.62%;
+    max-width: 768px;
   }
 }
 
