--- a/blocks/places/__paragraph/places__paragraph.css
+++ b/blocks/places/__paragraph/places__paragraph.css
@@ -2,7 +2,7 @@
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
-  line-height: 1.61;
+  line-height: 163%;
   color: #ffffff;
   padding: 0;
   margin: 0 0 26px 0;
@@ -12,21 +12,26 @@
   .places__paragraph {
     width: 456px;
     min-height: min-content;
-    font-size: 18px;
-    padding: 0;
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1024px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
   .places__paragraph {
-    margin-top: 0;
     margin-bottom: 25px;
     font-size: 16px;
+  }
+
+  .places__paragraph:last-child {
+    margin-bottom: 0;
   }
 }
 
 @media screen and (max-width: 425px) {
   .places__paragraph {
     font-size: 16px;
+  }
+
+  .places__paragraph:last-child {
+    margin-bottom: 0;
   }
 }
