--- a/blocks/places/__url-heading/places__url-heading.css
+++ b/blocks/places/__url-heading/places__url-heading.css
@@ -5,21 +5,12 @@
   line-height: 1;
   letter-spacing: 2px;
   color: #aaaaaa;
-}
-
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-  .places__url-heading {
-    margin-top: 0;
-  }
+  margin: 0 0 12px 0;
+  padding: 0;
 }
 
 @media screen and (min-width: 425px) and (max-width: 768px) {
   .places__url-heading {
-    margin: 0;
-    padding-bottom: 12px;
     width: 90%;
-    font-size: 12px;
-    line-height: 12px;
-    letter-spacing: 2px;
   }
 }
