--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-rows: repeat(auto-fit, minmax(660px, 1fr));
   gap: 80px;
-  padding-left: 100px;
+  padding-left: 148px;
   margin: 0 0 92px 0;
   max-width: 984px;
 }
@@ -11,7 +11,7 @@
   .places {
     padding: 0;
     margin: 0 auto 92px;
-    grid-template-rows: repeat(auto-fit, minmax(564px, 1fr));
+    grid-template-rows: repeat(auto-fit, minmax(564px, 640px));
   }
 }
 
@@ -35,9 +35,9 @@
 @media screen and (max-width: 425px) {
   .places {
     margin: 0 auto 66px auto;
-    padding: 0;
     gap: 32px;
-    max-width: calc(100% - 32px);
-    padding: 0 16px;
+    padding: 0;
+    width: 100%;
+    box-sizing: border-box;
   }
 }
