--- a/blocks/subtitle/subtitle.css
+++ b/blocks/subtitle/subtitle.css
@@ -6,7 +6,6 @@
   color: #ffffff;
   text-align: center;
   margin: 0 auto 64px;
-  max-width: 600px;
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
@@ -28,8 +27,8 @@
   .subtitle {
     max-width: 80%;
     font-size: 16px;
-    line-height: 20px;
+    line-height: 1.25;
     margin-top: 16px;
-    margin-bottom: 32px;
+    margin-bottom: 40px;
   }
 }
