--- a/blocks/title/_place/title_place_intro.css
+++ b/blocks/title/_place/title_place_intro.css
@@ -9,6 +9,12 @@
   width: 70%;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .title_place_intro {
+    width: 93.75%;
+  }
+}
+
 @media screen and (max-width: 425px) {
   .title_place_intro {
     width: 90%;
