--- a/blocks/title/title.css
+++ b/blocks/title/title.css
@@ -9,7 +9,7 @@
   max-width: 720px;
 }
 
-@media screen and (min-width: 425px) and (max-width: 768px) {
+@media screen and (min-width: 425px) and (max-width: 767px) {
   .title {
     font-size: 10vw;
     max-width: 100%;
@@ -19,6 +19,7 @@
 @media screen and (max-width: 425px) {
   .title {
     width: 90%;
+    margin: 0 auto 16px;
     font-size: 40px;
     line-height: 44px;
   }
