--- a/blocks/header/_header.scss
+++ b/blocks/header/_header.scss
@@ -1,11 +1,11 @@
 .header {
+  position: relative;
   display: flex;
   flex-direction: row;
-  position: relative;
   justify-content: space-between;
   margin: 28px auto 64px;
   max-width: calc(100% - 96px);
-  @include responsive(tablet){
+  @include responsive(tablet) {
     margin: 28px 24px 48px 24px;
     max-width: calc(100% - 48px);
   }
@@ -14,9 +14,9 @@
     max-width: calc(100% - 48px);
   }
   @include responsive(phone) {
-    min-height: 42px;
-    padding: 0;
     margin: 16px auto 48px;
+    padding: 0;
+    min-height: 42px;
     max-width: calc(100% - 32px);
   }
   &__lang-links {
@@ -25,11 +25,10 @@
     justify-content: space-between;
     list-style-type: none;
     margin: 0;
-    padding: 0;
+    padding: 0 0 6px 0;
     align-items: flex-end;
-    font-size: 24px;
-    padding-bottom: 6px;
     min-width: calc(1.25em + 0.75em + 1.25em);
+    font-size: 24px;
     @include responsive(tablet) {
       padding-bottom: 10px;
       font-size: 18px;
@@ -47,18 +46,18 @@
     }
   }
   &__lang-link {
-    color: $textcolor;
     font-weight: $fontnormal;
     line-height: 1.17;
     text-align: right;
     text-decoration: none;
+    color: $textcolor;
     transition: linear 0.2s;
     &:hover {
       opacity: 0.7;
       cursor: pointer;
     }
-      &_active {
-        text-decoration: underline;
-      }
+    &_active {
+      text-decoration: underline;
+    }
   }
 }
