--- a/pages/index.css
+++ b/pages/index.css
@@ -7,14 +7,15 @@
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   text-rendering: optimizeLegibility;
-  background-color:#2a2c2f;
-  margin: 0 auto;
   position: relative;
   box-sizing: border-box;
-  font-family: "Inter", "Open Sans", sans-serif;
+  margin: 0 auto;
   min-width: 320px;
   max-width: 1280px;
   width: 100%;
+  font-family: "Inter", "Open Sans", sans-serif;
+  font-style: normal;
+  background-color: #2a2c2f;
 }
 @media screen and (max-width: 425px) {
   .page {
@@ -23,9 +24,9 @@
 }
 
 .header {
+  position: relative;
   display: flex;
   flex-direction: row;
-  position: relative;
   justify-content: space-between;
   margin: 28px auto 64px;
   max-width: calc(100% - 96px);
@@ -44,9 +45,9 @@
 }
 @media screen and (max-width: 425px) {
   .header {
-    min-height: 42px;
-    padding: 0;
     margin: 16px auto 48px;
+    padding: 0;
+    min-height: 42px;
     max-width: calc(100% - 32px);
   }
 }
@@ -56,11 +57,10 @@
   justify-content: space-between;
   list-style-type: none;
   margin: 0;
-  padding: 0;
+  padding: 0 0 6px 0;
   align-items: flex-end;
-  font-size: 24px;
-  padding-bottom: 6px;
   min-width: 3.25em;
+  font-size: 24px;
 }
 @media (min-width: 768px) and (max-width: 1024px) {
   .header__lang-links {
@@ -84,12 +84,11 @@
   }
 }
 .header__lang-link {
-  color: #ffffff;
-  font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
   line-height: 1.17;
   text-align: right;
   text-decoration: none;
+  color: #ffffff;
   transition: linear 0.2s;
 }
 .header__lang-link:hover {
@@ -112,10 +111,10 @@
 }
 
 .lead {
-  padding: 0;
   margin: 0 auto 96px;
-  text-align: center;
+  padding: 0;
   max-width: 984px;
+  text-align: center;
 }
 @media screen and (max-width: 425px) {
   .lead {
@@ -123,16 +122,15 @@
   }
 }
 .lead__caption {
-  text-align: left;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 10px;
-  line-height: 1.4;
-  color: #ffffff;
-  letter-spacing: 1.5px;
-  text-transform: uppercase;
   margin: 0;
   min-width: 158px;
+  text-align: left;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 1.4;
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
+  color: #ffffff;
 }
 @media (min-width: 768px) and (max-width: 1024px) {
   .lead__caption {
@@ -155,8 +153,8 @@
   margin: 0;
 }
 .lead__image {
-  margin: 0 auto 8px;
   display: block;
+  margin: 0 auto 8px;
   min-height: 62.5%;
   width: 100%;
 }
@@ -175,49 +173,47 @@
 }
 
 .title {
-  font-style: normal;
+  margin: 0 auto 24px;
+  max-width: 720px;
+  text-align: center;
   font-weight: 900;
   font-size: 96px;
   line-height: 1.04;
   color: #ffffff;
-  text-align: center;
-  margin: 0 auto 24px;
-  max-width: 720px;
 }
 @media (min-width: 425px) and (max-width: 768px) {
   .title {
-    font-size: 10vw;
     max-width: 100%;
+    font-size: 10vw;
   }
 }
 @media screen and (max-width: 425px) {
   .title {
-    width: 90%;
     margin: 0 auto 16px;
+    width: 90%;
     font-size: 40px;
-    line-height: 44px;
+    line-height: 1.11;
   }
 }
 .title_place_places {
-  font-style: normal;
+  margin: 8px 0 0 0;
+  max-width: 460px;
+  text-align: left;
   font-weight: 900;
   font-size: 72px;
   line-height: 1.05;
   color: #ffffff;
-  text-align: left;
-  margin: 8px 0 0 0;
-  max-width: 460px;
 }
 @media (min-width: 1024px) and (max-width: 1280px) {
   .title_place_places {
-    width: 440px;
     margin-right: 32px;
+    width: 440px;
   }
 }
 @media (min-width: 768px) and (max-width: 1024px) {
   .title_place_places {
-    width: 48%;
     margin-right: 0;
+    width: 48%;
     min-height: -webkit-min-content;
     min-height: -moz-min-content;
     min-height: min-content;
@@ -227,27 +223,26 @@
   .title_place_places {
     max-width: 90%;
     min-height: 35px;
+    margin: 0;
     font-size: 42px;
     line-height: 1.09;
-    margin: 0;
   }
 }
 @media screen and (max-width: 425px) {
   .title_place_places {
+    padding: 0 16px;
     font-size: 32px;
     line-height: 1.09;
-    padding: 0 16px;
   }
 }
 .title_place_intro {
-  font-style: normal;
+  margin: 0;
+  width: 70%;
+  text-align: left;
   font-weight: 900;
   font-size: 54px;
   line-height: 1.07;
   color: #ffffff;
-  text-align: left;
-  margin: 0;
-  width: 70%;
 }
 @media (min-width: 768px) and (max-width: 1024px) {
   .title_place_intro {
@@ -263,17 +258,15 @@
 }
 .title_place_cover {
   position: relative;
-  font-size: 72px;
-  line-height: 1.05;
-  z-index: 3;
-  margin: 0;
-  max-width: 560px;
-  text-align: center;
   grid-column: 1;
   grid-row: 1;
   justify-self: center;
+  z-index: 3;
+  max-width: 560px;
   margin: 0 0 32px;
   text-align: center;
+  font-size: 72px;
+  line-height: 1.05;
 }
 .title_place_cover:hover {
   cursor: pointer;
@@ -289,9 +282,9 @@
 }
 @media (min-width: 768px) and (max-width: 1024px) {
   .title_place_cover {
-    width: 84.3%;
     min-height: auto;
     min-width: 560px;
+    width: 84.3%;
   }
 }
 @media (min-width: 425px) and (max-width: 768px) {
@@ -302,62 +295,59 @@
 @media screen and (max-width: 425px) {
   .title_place_cover {
     width: 90%;
-    font-size: 32px;
-    line-height: 1.09;
     margin: 0;
     text-align: center;
+    font-size: 32px;
+    line-height: 1.09;
   }
 }
 
 .subtitle {
-  font-style: normal;
-  font-weight: normal;
+  margin: 0 auto 64px;
+  max-width: 640px;
+  font-weight: 400;
   font-size: 30px;
   line-height: 1.2;
   color: #ffffff;
   text-align: center;
-  margin: 0 auto 64px;
-  max-width: 640px;
 }
 @media (min-width: 1024px) and (max-width: 1280px) {
   .subtitle {
-    margin-bottom: 56px;
     margin: 0 calc((100% - 640px) / 2) 56px;
   }
 }
 @media (min-width: 768px) and (max-width: 1024px) {
   .subtitle {
-    font-size: 3.8vw;
     max-width: 80%;
+    font-size: 3.8vw;
   }
 }
 @media (min-width: 425px) and (max-width: 768px) {
   .subtitle {
-    font-size: 3.8vw;
     max-width: 80%;
+    font-size: 3.8vw;
   }
 }
 @media screen and (max-width: 425px) {
   .subtitle {
+    margin-top: 16px;
+    margin-bottom: 40px;
     max-width: 80%;
     font-size: 16px;
     line-height: 1.25;
-    margin-top: 16px;
-    margin-bottom: 40px;
   }
 }
 .subtitle_place_cover {
   position: relative;
-  font-style: normal;
-  font-weight: normal;
+  z-index: 3;
+  max-width: 360px;
+  margin: 0 auto;
+  font-weight: 400;
   font-size: 18px;
   line-height: 1.22;
   text-align: center;
-  color: #ffffff;
-  max-width: 360px;
-  margin: 0 auto;
-  z-index: 3;
   font-weight: 400;
+  color: #ffffff;
 }
 .subtitle_place_cover:hover {
   cursor: pointer;
@@ -372,10 +362,10 @@
 }
 @media screen and (max-width: 425px) {
   .subtitle_place_cover {
+    margin: 16px 5% 0;
     width: 90%;
     font-size: 14px;
     line-height: 16px;
-    margin: 16px 5% 0;
   }
 }
 
@@ -392,22 +382,22 @@
 }
 @media (min-width: 425px) and (max-width: 768px) {
   .intro {
-    padding: 0;
     margin: 0 auto 88px 24px;
+    padding: 0;
   }
 }
 @media screen and (max-width: 425px) {
   .intro {
-    max-width: 320px;
-    box-sizing: border-box;
     margin: 0;
     padding: 0 16px 64px;
+    max-width: 320px;
+    box-sizing: border-box;
   }
 }
 .intro__list {
-  width: 70%;
   margin: 0;
   padding: 0;
+  width: 70%;
   list-style-type: none;
 }
 @media screen and (max-width: 425px) {
@@ -417,23 +407,21 @@
 }
 .intro__list-item {
   font-size: 12px;
-  font-style: normal;
+  line-height: 1.5;
   font-weight: 400;
   color: #ffffff;
-  line-height: 18px;
 }
 .intro__list-text {
   font-weight: 700;
 }
 .intro__text {
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 1.63;
-  color: #ffffff;
   margin-top: 2.5em;
   margin-bottom: 2.06em;
   width: 70%;
+  font-size: 16px;
+  line-height: 1.63;
+  color: #ffffff;
+  font-weight: 400;
 }
 @media (min-width: 768px) and (max-width: 1024px) {
   .intro__text {
@@ -517,15 +505,15 @@
   display: grid;
   grid-template-rows: repeat(auto-fit, minmax(660px, 1fr));
   gap: 80px;
-  padding-left: 148px;
   margin: 0 0 92px 0;
+  padding-left: 148px;
   max-width: 984px;
 }
 @media (min-width: 1024px) and (max-width: 1280px) {
   .places {
-    padding: 0;
-    margin: 0 auto 92px;
     grid-template-rows: repeat(auto-fit, minmax(564px, 640px));
+    margin: 0 auto 92px;
+    padding: 0;
   }
 }
 @media (min-width: 768px) and (max-width: 1024px) {
@@ -538,25 +526,25 @@
 }
 @media (min-width: 425px) and (max-width: 768px) {
   .places {
-    max-width: calc(100% - 48px);
     margin: 0;
     padding: 0 24px;
+    max-width: calc(100% - 48px);
   }
 }
 @media screen and (max-width: 425px) {
   .places {
-    margin: 0 auto 66px auto;
     gap: 50px;
+    margin: 0 auto 66px auto;
     padding: 0;
     width: 100%;
     box-sizing: border-box;
   }
 }
 .places__place {
-  margin: 0;
   display: grid;
   grid-template-columns: minmax(440px, 460px) minmax(456px, 484px);
   grid-gap: 40px 40px;
+  margin: 0;
 }
 @media (min-width: 1024px) and (max-width: 1280px) {
   .places__place {
@@ -611,9 +599,9 @@
 }
 @media screen and (max-width: 425px) {
   .places__image {
-    width: 100%;
     -o-object-fit: contain;
        object-fit: contain;
+    width: 100%;
     margin: 0;
     padding: 0;
   }
@@ -642,13 +630,12 @@
   }
 }
 .places__paragraph {
-  font-style: normal;
-  font-weight: normal;
+  margin: 0 0 26px 0;
+  padding: 0;
+  font-weight: 400;
   font-size: 18px;
   line-height: 163%;
   color: #ffffff;
-  padding: 0;
-  margin: 0 0 26px 0;
 }
 @media (min-width: 1024px) and (max-width: 1280px) {
   .places__paragraph {
@@ -676,14 +663,13 @@
   }
 }
 .places__url-heading {
-  font-style: normal;
-  font-weight: normal;
+  margin: 0 0 12px 0;
+  padding: 0;
+  font-weight: 400;
   font-size: 12px;
   line-height: 1;
   letter-spacing: 2px;
   color: #aaaaaa;
-  margin: 0 0 12px 0;
-  padding: 0;
 }
 @media (min-width: 425px) and (max-width: 768px) {
   .places__url-heading {
@@ -707,18 +693,17 @@
 }
 @media screen and (max-width: 425px) {
   .places__website {
-    padding: 0 16px;
     margin: 0;
+    padding: 0 16px;
   }
 }
 
 .link {
-  font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
   font-size: 18px;
   line-height: 1.2;
-  color: #ffffff;
   text-decoration: underline;
+  color: #ffffff;
 }
 .link:hover {
   cursor: pointer;
@@ -731,10 +716,10 @@
 }
 
 .cover {
+  position: relative;
   display: flex;
   flex-direction: column;
   max-width: 1184px;
-  position: relative;
   margin: 0 auto;
   padding: 0 0 92px 0;
   text-align: center;
@@ -750,44 +735,44 @@
 @media (min-width: 768px) and (max-width: 1024px) {
   .cover {
     max-width: 100%;
-    padding-bottom: 88px;
     min-height: 480px;
+    padding-bottom: 88px;
   }
 }
 @media (min-width: 425px) and (max-width: 768px) {
   .cover {
     width: 100%;
+    margin-top: 90px;
     padding-bottom: 88px;
     -o-object-fit: cover;
        object-fit: cover;
-    margin-top: 90px;
     min-height: 480px;
   }
 }
 @media screen and (max-width: 425px) {
   .cover {
-    min-width: 320px;
     padding-bottom: 64px;
+    min-width: 320px;
     min-height: 200px;
   }
 }
 .cover__background {
   grid-column: 1;
   grid-row: 1;
-  background-image: url(../images/cover-trains.jpg);
-  background-position: center;
   -o-object-fit: cover;
      object-fit: cover;
   padding-bottom: 62.5%;
+  background-image: url(../images/cover-trains.jpg);
+  background-position: center;
   opacity: 0.3;
 }
 .cover__overlay {
-  background-image: url(../images/cover-trains.jpg);
-  background-size: cover;
-  background-position: center;
   height: 100%;
   align-items: center;
   justify-content: center;
+  background-image: url(../images/cover-trains.jpg);
+  background-size: cover;
+  background-position: center;
 }
 .cover__overlay::before {
   content: "";
@@ -853,70 +838,67 @@
 @media (min-width: 425px) and (max-width: 768px) {
   .footer {
     flex-direction: column;
-    min-height: 334px;
-    max-width: 320px;
     margin: 0;
     padding: 0;
+    min-height: 334px;
+    max-width: 320px;
     box-sizing: border-box;
   }
 }
 @media screen and (max-width: 425px) {
   .footer {
     flex-direction: column;
-    min-height: 334px;
-    max-width: 320px;
     margin: 0;
     padding: 0;
+    min-height: 334px;
+    max-width: 320px;
     box-sizing: border-box;
   }
 }
 .footer__links {
-  margin: 0;
-  padding: 0;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  align-content: center;
+  margin: 0;
+  padding: 0;
   list-style-type: none;
   border: none;
-  align-content: center;
 }
 @media (min-width: 425px) and (max-width: 768px) {
   .footer__links {
-    box-sizing: border-box;
     display: grid;
     grid-template-rows: repeat(5, 24px);
     gap: 32px;
     padding: 0;
-    margin: 0;
-    color: #ffffff;
+    margin: 0 0 32px 0;
+    max-width: calc(100% - 32px);
+    box-sizing: border-box;
     list-style-type: none;
     font-size: 24px;
-    max-width: calc(100% - 32px);
-    margin-bottom: 32px;
+    color: #ffffff;
   }
 }
 @media screen and (max-width: 425px) {
   .footer__links {
-    box-sizing: border-box;
     display: grid;
     grid-template-rows: repeat(5, 24px);
     gap: 32px;
     padding: 0;
-    margin: 0;
-    color: #ffffff;
-    list-style-type: none;
- 
+    margin: 0 0 32px 0;
     max-width: calc(100% - 32px);
-    margin-bottom: 32px;
+    box-sizing: border-box;
+    list-style-type: none;
+    font-size: 24px;
+    color: #ffffff;
   }
 }
 .footer__link {
-  font-style: normal;
-  font-weight: normal;
+  margin-right: 18px;
+  font-weight: 400;
   font-size: 16px;
   line-height: 1.12;
   text-decoration: none;
-  margin-right: 18px;
 }
 @media (min-width: 425px) and (max-width: 768px) {
   .footer__link {
@@ -952,13 +934,12 @@
 .footer__copyright {
   margin: 0;
   padding: 0;
-  font-style: normal;
-  font-weight: normal;
+  max-width: 11.62rem;
+  font-weight: 400;
   font-size: 14px;
   line-height: 1.14;
   text-align: right;
   color: #ffffff;
-  max-width: 11.62rem;
 }
 @media (min-width: 768px) and (max-width: 1024px) {
   .footer__copyright {
