--- a/blocks/link/_link.scss
+++ b/blocks/link/_link.scss
@@ -1,6 +1,6 @@
 .link {
   font-weight: $fontnormal;
-  font-size: 18px;
+  font-size: $medium;
   line-height: 1.2;
   text-decoration: underline;
   color: $textcolor;
