--- a/pages/index.scss
+++ b/pages/index.scss
@@ -8,6 +8,8 @@
 
 @import "../variables/fontweight";
 
+@import "../variables/fontsize";
+
 @import "../blocks/page/_page.scss";
 
 @import "../blocks/header/_header.scss";
