--- a/blocks/lead/_lead.scss
+++ b/blocks/lead/_lead.scss
@@ -11,7 +11,7 @@
     min-width: 158px;
     text-align: left;
     font-weight: $fontnormal;
-    font-size: 10px;
+    font-size: $xx-small;
     line-height: 1.4;
     letter-spacing: 1.5px;
     text-transform: uppercase;
