--- a/blocks/title/_title.scss
+++ b/blocks/title/_title.scss
@@ -3,17 +3,17 @@
   max-width: 720px;
   text-align: center;
   font-weight: $fontbold;
-  font-size: 96px;
+  font-size: $title-x-large;
   line-height: 1.04;
   color: $textcolor;
   @include responsive(smalltablet) {
     max-width: 100%;
-    font-size: 10vw;
+    font-size: $title-medium;
   }
   @include responsive(phone) {
     margin: 0 auto 16px;
     width: 90%;
-    font-size: 40px;
+    font-size: $title-x-small;
     line-height: 1.11;
   }
   &_place_places {
@@ -21,7 +21,7 @@
     max-width: 460px;
     text-align: left;
     font-weight: $fontbold;
-    font-size: 72px;
+    font-size: $title-large;
     line-height: 1.05;
     color: $textcolor;
     @include responsive(laptop) {
@@ -37,12 +37,12 @@
       max-width: 90%;
       min-height: 35px;
       margin: 0;
-      font-size: 42px;
+      font-size: $title-small;
       line-height: 1.09;
     }
     @include responsive(phone) {
       padding: 0 16px;
-      font-size: 32px;
+      font-size: $title-xx-small;
       line-height: 1.09;
     }
   }
@@ -51,7 +51,7 @@
     width: 70%;
     text-align: left;
     font-weight: $fontbold;
-    font-size: 54px;
+    font-size: $title-medium;
     line-height: 1.07;
     color: $textcolor;
     @include responsive(tablet) {
@@ -59,7 +59,7 @@
     }
     @include responsive(phone) {
       width: 90%;
-      font-size: 32px;
+      font-size: $title-xx-small;
       line-height: 1.09;
     }
   }
@@ -72,7 +72,7 @@
     max-width: 560px;
     margin: 0 0 32px;
     text-align: center;
-    font-size: 72px;
+    font-size: $title-large;
     line-height: 1.05;
     &:hover {
       cursor: pointer;
@@ -88,13 +88,13 @@
       width: 84.3%;
     }
     @include responsive(smalltablet) {
-      font-size: 52px;
+      font-size: $title-normal;
     }
     @include responsive(phone) {
       width: 90%;
       margin: 0;
       text-align: center;
-      font-size: 32px;
+      font-size: $title-xx-small;
       line-height: 1.09;
     }
   }
