--- a/blocks/photo-grid/_photo-grid.scss
+++ b/blocks/photo-grid/_photo-grid.scss
@@ -14,7 +14,7 @@
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(6, 1fr);
     grid-gap: 16px;
-    padding: 0 24px 0 24px;
+    padding: 0 24px 0;
   }
   @include responsive(phone) {
     margin: 0 auto 64px;
@@ -38,7 +38,6 @@
       object-fit: fill;
     }
     @include responsive(phone) {
-      display: block;
       width: 100%;
       object-fit: fill;
     }
