--- a/blocks/cover/_cover.scss
+++ b/blocks/cover/_cover.scss
@@ -34,7 +34,7 @@
     grid-row: 1;
     object-fit: cover;
     padding-bottom: 62.5%;
-    background-image: url(../images/cover-trains.jpg);
+    background-image: url(../images/__background-cover.jpg);
     background-position: center;
     opacity: 0.3;
   }
@@ -42,7 +42,7 @@
     height: 100%;
     align-items: center;
     justify-content: center;
-    background-image: url(../images/cover-trains.jpg);
+    background-image: url(../images/__background-cover.jpg);
     background-size: cover;
     background-position: center;
     &::before {
